[package]
name = "xen-vhost-frontend"
version = "0.1.0"
authors = ["Viresh Kumar <viresh.kumar@linaro.org>"]
keywords = ["xen", "vhost-user", "virtio", "frontend"]
description = "Xen vhost frontend"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=3.0",  features = ["derive"] }
field-offset = "0.3.4"
lazy_static = "1.4.0"
libc = ">=0.2.95"
log = "0.4.14"
seccompiler = "0.2.0"
thiserror = "1.0"
vhost = { git = "https://github.com/vireshk/vhost", branch = "main", features = ["vhost-user-master", "vhost-kern", "vhost-user-slave", "xen"] }
virtio-bindings = { git = "https://github.com/vireshk/vm-virtio", branch = "main" }
vhost-user-frontend = { git = "https://github.com/vireshk/vhost", branch = "main", features = ["xen"] }
virtio-queue = { git = "https://github.com/vireshk/vm-virtio", branch = "main" }
vm-memory = { git = "https://github.com/vireshk/vm-memory", branch = "main", features = ["backend-mmap", "backend-atomic", "backend-bitmap", "xen"] }
vmm-sys-util = "0.11"
xen-ioctls = { git = "https://gitlab.com/mathieupoirier/oxerun/" }
xen-store = { git = "https://gitlab.com/mathieupoirier/oxerun/" }
xen-bindings = { git = "https://gitlab.com/mathieupoirier/oxerun/" }
